--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
   "orientation": "portrait",
 "icons": [
   {
-    "src": "/assets/icon-background45.png",
+    "src": "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/192px-React-icon.svg.png",
     "sizes": "192x192",
     "type": "image/png"
   },
   {
-    "src": "/assets/FM-PWA.png",
+    "src": "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/512px-React-icon.svg.png",
     "sizes": "512x512",
     "type": "image/png"
   }
