--- a/manifest.json
+++ b/manifest.json
@@ -7,16 +7,16 @@
   "background_color": "#2c3e50",
   "theme_color": "#667eea",
   "orientation": "portrait",
-"icons": [
-  {
-    "src": "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/192px-React-icon.svg.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  },
-  {
-    "src": "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/512px-React-icon.svg.png",
-    "sizes": "512x512",
-    "type": "image/png"
-  }
-]
+  "icons": [
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
